2008-09-29  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (struct _Starling): Add field search_enabled.
	(KEY_SEARCH_ENABLED): Define.
	(struct deserialize_bottom_half): Add field search_enabled.
	(deserialize_bottom_half): Set ST->SEARCH_ENABLED's active state
	according to BH->SEARCH_ENABLED.
	(deserialize): Set BH->SEARCH_ENABLED according to
	KEY_SEARCH_ENABLED.  Only search if BH->SEARCH_ENABLED is true.
	(serialize): Save ST->SEARCH_ENABLED's active state.
	(search_text_regen): If ST->SEARCH_ENABLED is active, generate the
	search text based on TEXT, other use NULL.
	(search_text_changed): Don't generate a search text menu item if
	ST->SEARCH_ENABLED is not enabled.
	(starling_run): Create a search enabled check button.  Attach
	search_text_changed to its "toggled" signal.

2008-09-29  Neal H. Walfield  <neal@gnu.org>

	* src/starling.c (search_text_gen): Enable searching on a
	particular field.

2008-09-29  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.h (enum mdb_fields): Add MDB_DATE_ADDED,
	MDB_DATE_LAST_PLAYED, MDB_DATE_TAGS_UPDATED,
	MDB_UPDATE_DATE_LAST_PLAYED and MDB_UPDATE_DATE_TAGS_UPDATED.
	(struct music_db_info): Add fields date_added, date_last_played
	and date_tags_updated.
	* src/musicdb.c (music_db_set_info): Update date_last_played if
	MDB_UPDATE_DATE_LAST_PLAYED is set in INFO.FLAGS.  Update
	date_tages_updated if MDB_UPDATE_DATE_TAGS_UPDATED is set in
	INFO.FLAGS.
	(music_db_set_info_from_tags): Set MDB_UPDATE_DATE_TAGS_UPDATED in
	INFO.FIELDS.
	* src/starling.c (search_text_gen): Treated a "played:" prefix as
	a request to search on the time since a track was last played.

2008-09-29  Neal H. Walfield  <neal@gnu.org>

	* src/musicdb.c (music_db_create_table): Add columns date_added,
	date_last_played and date_tags_update.
	(music_db_add): When inserting, also initialize the track's
	date_added value.
	* src/starling.c (search_text_gen): Treat "added:" as a request to
	search on the time since a track was added to the database.
