@@ -1,5 +1,13 @@
 2008-09-29  Neal H. Walfield  <neal@gnu.org>
 
+	* src/starling.c (search_text_regen): If the search text is empty
+	or disabled and the constraint is NULL, then do nothing.
+
+	(set_position_text): New function.
+	(starling_run): Create a button to clear the search text.
+
+2008-09-29  Neal H. Walfield  <neal@gnu.org>
+
 	* src/starling.c (struct _Starling): Add field search_enabled.
 	(KEY_SEARCH_ENABLED): Define.
 	(struct deserialize_bottom_half): Add field search_enabled.
